Changed background colour to purple. Made new file for my work.

--- a/PSWork/styling-lists.html
+++ b/PSWork/styling-lists.html
@@ -6,6 +6,9 @@
     <title>Styling lists</title>
     <style>
       /* General styles */
+      body {
+        background-color: rebeccapurple ;
+      }
 
       html {
         font-family: Helvetica, Arial, sans-serif;
